examples/pos/SimpleOperations-Pos.iml
program simpleOperationsPos()
global
  var i1: int64;
  var i2: int64;
  var b1: bool;
  var b2: bool
do
  i1 init := 1;
  i2 init := 2;
  b1 init := true;
  b2 init := false;

  debugout i1 + i1;
  debugout i1 - i1;
  debugout i1 * i2;
  debugout i2 divE i1;
  // debugout i2 divF i1;
  debugout i2 modE i1;
  // debugout i2 modF i1;
  debugout -i1;
  debugout +i2;
  // combination
  debugout (-i1 + i2) * i2;
  debugout -i1 + i2 * i2;

  debugout i1 < i2;
  debugout i1 > i2;
  debugout i2 <= i1;
  debugout i2 >= i1;

  debugout i1 = i2;
  debugout i1 /= i1;
  debugout b1 = b2;
  debugout b1 /= b1;
  debugout not b1;

  debugout b1 /\? b2;
  debugout b2 \/? b2;
  // combination
  debugout i1 < i2 /\? b1 = b2 \/? not b2
endprogram
