examples/neg/ParallelAssignment-Neg5.iml
// missmatch quantity of rvalues
program parallelAssignmentNeg1()
do
  var i1: int64;
  var i2: int64;
  var b1: bool;
  var b2: bool;
  i1 init, i2 init, b1 init, b2 init := 1 , true, 2
endprogram
